# flappy-bird-segundaMaquina

./: cambiarPropietarioPines.service  cambiarPropietarioPines.sh  flappyBird.desktop  install.sh  perroGuardian.service  perroGuardian.sh  powerOff-E135.service  rotarPantalla.desktop  send_email.service  send_email.sh
ID003_Lib_V3/: CMakeLists.txt  CMakeLists.txt.user.992c8c7.18  IDcomand.cpp  IDcomand.h  Idcomm.cpp  Idcomm.h  id003_lib_v3.cpp  id003_lib_v3.h  id003_lib_v3_global.h
ID003_Lib_V3-build/: CMakeCache.txt  ID003_LIB_V3.cbp  Makefile  cmake_install.cmake
ID003_Lib_V3/logs/: KbiredUtilities.cpp  KbiredUtilities.h
build-cmakeFlappy-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  smart-vending-flappy-bird.cbp  smart-vending-flappy-bird_automoc.cpp
build-cmakeFlappy-Desktop-Default/smart-vending-flappy-bird_automoc.dir/: moc_awardPrize_QGAZDNMU22GUBR.cpp  moc_configurationF_5WNXXBCICXNTD3.cpp  moc_elebackground_772OMBDDK4JHFH.cpp  moc_elebird_KLACRE5ESD75U6.cpp  moc_eleground_S7GXRXDQUGIWXK.cpp  moc_eleoverboard_ZEIZO2FQSWCVLS.cpp  moc_elepipe_T2CF6OCTRXFZEW.cpp  moc_elereadyboard_6ZYOCPL7SD37RG.cpp  moc_elescoreboard_6BFF2A25SPIDEQ.cpp  moc_eletitleboard_O2BEY73GDCYQKW.cpp  moc_gameelement_C5WNWSEGLANNWA.cpp  moc_key_CBZCBNMBTZV227.cpp  moc_mainwindow_L2CLFKCLUYECYY.cpp  moc_product_MIANZCYSXPGCZS.cpp  moc_productsmanage_YREECMY7WH3BZB.cpp
build-poowerOff-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  powerOff-E135  powerOff-E135.cbp  powerOff-E135_automoc.cpp
build-poowerOff-Desktop-Default/powerOff-E135_automoc.dir/: moc_key_CBZCBNMBTZV227.cpp
cmakeFlappy/: CMakeLists.txt  CMakeLists.txt.user.18  awardPrize.cpp  awardPrize.h  configurationFile.cpp  configurationFile.h  elebackground.cpp  elebird.cpp  elebird.h  eleground.cpp  eleground.h  eleoverboard.cpp  eleoverboard.h  elepipe.cpp  elepipe.h  elereadyboard.cpp  elereadyboard.h  elescoreboard.cpp  elescoreboard.h  eletitleboard.cpp  gameelement.cpp  gameelement.h  identificarArduino.h  joystick_flappy.cpp  joystick_flappy.h  key.cpp  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.h.autosave  myKeyEvents.h  product.cpp  product.h  productsmanager.cpp  productsmanager.h  puerto_serial.cpp  puerto_serial.h
cmakeFlappy-build/: CMakeCache.txt  Makefile  cmake_install.cmake  moc_awardPrize.cpp  moc_configurationFile.cpp  moc_elebackground.cpp  moc_elebird.cpp  moc_eleground.cpp  moc_eleoverboard.cpp  moc_elepipe.cpp  moc_elereadyboard.cpp  moc_elescoreboard.cpp  moc_eletitleboard.cpp  moc_gameelement.cpp  moc_joystick_flappy.cpp  moc_mainwindow.cpp  moc_product.cpp  moc_productsmanager.cpp  moc_puerto_serial.cpp  smart-vending-flappy-bird.cbp  smart-vending-flappy-bird_automoc.cpp
cmakeFlappy/flappyBirdConfig/: billetes.ini  config.ini  productos.ini
cmakeFlappy/qml/: qml.qrc
cmakeFlappy/resource/: sounds.qrc
dpci_install_3.1.1.572_release_linux_x86_64/: CHANGE_LOG.txt  EULA.txt  RELEASE_NOTES.txt
dpci_install_3.1.1.572_release_linux_x86_64/usr/include/: dpci_api_debug.h  dpci_api_decl.h  dpci_api_types.h  dpci_bios_api.h  dpci_boards.h  dpci_core_api.h  dpci_core_hw.h  dpci_error.h  dpci_rom_api.h  dpci_sram_api.h
dpci_install_3.1.1.572_release_linux_x86_64/usr/lib/: install.sh  libdpcidebug.so.3.1.1
dpci_install_3.1.1.572_release_linux_x86_64/usr/src/InnocoreGaming/DirectPCI-3.1.1.572_release_linux_x86_64/: Makefile
dpci_install_3.1.1.572_release_linux_x86_64/usr/src/InnocoreGaming/DirectPCI-3.1.1.572_release_linux_x86_64/api/: dpci_boards.c
dpci_install_3.1.1.572_release_linux_x86_64/usr/src/InnocoreGaming/DirectPCI-3.1.1.572_release_linux_x86_64/demo/: Makefile  batt_demo.c  bios_demo.c  callback_demo.c  eeprom_demo.c  i2c_demo.c  idlp_demo.c  idprom_demo.c  io_demo.c  rom_demo.c  sram_demo.c  ts_demo.c
dpci_install_3.1.1.572_release_linux_x86_64/usr/src/InnocoreGaming/DirectPCI-3.1.1.572_release_linux_x86_64/demo/dpci_core/: Makefile
dpci_install_3.1.1.572_release_linux_x86_64/usr/src/InnocoreGaming/DirectPCI-3.1.1.572_release_linux_x86_64/driver/: Makefile
dpci_install_3.1.1.572_release_linux_x86_64/usr/src/InnocoreGaming/DirectPCI-3.1.1.572_release_linux_x86_64/include/: build.h  dpci_version.h
librerias/: CMakeLists.txt
librerias-build/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake  serial_arduino_pc.cbp
newDigitalioLib/: CMakeLists.txt  CMakeLists.txt.user.3.3-pre1  CMakeLists.txt.user.992c8c7.18  digital_ports.h  digitalinput.cpp  digitalinput.h  digitalio_dpx_global.h  digitaloutput.cpp  digitaloutput.h  main.cpp  watchioports.cpp  watchioports.h
newDigitalioLib-build/: CMakeCache.txt  Makefile  cmake_install.cmake  digitalio_dpx.cbp
newEngine_sv/: CMakeLists.txt  CMakeLists.txt.user.992c8c7.18  enginesv.h  enginesv_dpx.cpp  enginesv_global.h  enginesv_rasp2.cpp
newEngine_sv-build/: CMakeCache.txt  Makefile  cmake_install.cmake  enginesv.cbp
powerOff/: CMakeLists.txt  key.h  main.cpp
(+27 files in other folders)
